--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,7 @@ environment:
     #APPVEYOR_CACHE_SKIP_RESTORE: true  # Uncomment when caching causes problems
 
   matrix:
-  # Two releases back
-  - TARGET: i686-pc-windows-msvc
-    CHANNEL: 1.22.0
-  - TARGET: i686-pc-windows-gnu
-    CHANNEL: 1.22.0
+  # Oldest supported
   - TARGET: x86_64-pc-windows-msvc
     CHANNEL: 1.22.0
   - TARGET: x86_64-pc-windows-gnu
