--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,13 @@ rust:
 - beta
 - nightly
 
+os:
+- linux
+- osx
+- windows
+
 install:
-- rustc -Vv
-- cargo -V
+- if [[ "$TRAVIS_OS_NAME" == "windows" ]]; then choco install windows-sdk-10.0; fi # windows workaround (for now)
 
 script:
 - cargo test --verbose
